<resources>
    <string name="app_name">StoryApp</string>
    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="message_welcome_page">Temukan berbagai cerita dari banyak pengguna hanya dalam satu genggaman</string>
    <string name="title_welcome_page">Selamat datang di diStory!</string>
    <string name="title_signup_page">Lengkapi data dirimu di bawah ini ya</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Masukkan dulu datamu ya</string>
    <string name="title_login_page">Sudah siap mengeksplorasi cerita inspiratif ?</string>
    <string name="name">Nama</string>
    <string name="message_main_page">Selamat Belajar di Dicoding.</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Keluar</string>
    <string name="ilustration_distory">Ilustration diStory</string>
    <string name="title_stories">Title Stories</string>
    <string name="image_story">Foto Story</string>
    <string name="see_details">See Details</string>
    <string name="upload">Unggah</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="description">Description</string>
    <string name="add_stories">Tambah Story</string>
    <string name="image_upload">Image Upload</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="maps">Maps</string>
    <string name="retry">Retry</string>
</resources>